remove legacy translations

--- a/templates/config-map12h-fw2.json
+++ b/templates/config-map12h-fw2.json
@@ -3777,8 +3777,7 @@
                 "Frequency": "Частота",
                 "Serial": "Серийный номер",
                 "Supply voltage": "Напряжение 5 В",
-                "Uptime": "Время работы с момента включения (с)",
-                "Firmware v2.10.0 or newer is required": "Для прошивок v2.10.0 и новее"
+                "Uptime": "Время работы с момента включения (с)"
             }
         }
     }
