--- a/templates/config-map3h-fw2.json
+++ b/templates/config-map3h-fw2.json
@@ -1179,8 +1179,7 @@
                 "Frequency": "Частота",
                 "Serial": "Серийный номер",
                 "Supply Voltage": "Напряжение 5 В",
-                "Uptime": "Время работы с момента включения (с)",
-                "Firmware v2.10.0 or newer is required": "Для прошивок v2.10.0 и новее"
+                "Uptime": "Время работы с момента включения (с)"
             }
         }
     }
