Set compatible firmware types for MAP3H-fw2, MAP6S-fw2, WB-MSW_v4, WB-MSW_v3 templates (#1036)
* edit MAP3H-fw2, MAP6S-fw2, WB-MSW_v4, WB-MSW_v3 templates

* bump version

* correct indents

* remove legacy translations

* delete legacy translations

---------

Co-authored-by: Alexander Getman <alexander.getman@wirenboard.com>

--- a/templates/config-wb-msw_v4.json
+++ b/templates/config-wb-msw_v4.json
@@ -42,6 +42,7 @@
             {
                 "title": "Safety Mode",
                 "id": "g_safety",
+                "fw": "4.32.0",
                 "description": "g_safety_description"
             },
             {
@@ -125,6 +126,7 @@
                 "description": "poll_timeout_description",
                 "address": 955,
                 "order": 1,
+                "fw": "4.32.0",
                 "reg_type": "holding",
                 "min": 1,
                 "max": 65534,
@@ -138,6 +140,7 @@
                 "reg_type": "holding",
                 "enum": [0, 1],
                 "default": 0,
+                "fw": "4.32.0",
                 "enum_titles": [
                     "No Action",
                     "Play IR Command"
@@ -153,6 +156,7 @@
                 "min": 1,
                 "max": 80,
                 "default": 1,
+                "fw": "4.32.0",
                 "condition": "safety_action==1"
             },
             "baud_rate": {
@@ -1615,7 +1619,7 @@
                 "CO2 Sensor Type": "CO₂ Sensor Type",
                 "CO2 Sensor Software Version": "CO₂ Sensor Software Version",
                 "VOC Equivalent CO2 Concentration": "VOC Equivalent CO₂ Concentration (eCO₂)",
-                "g_safety_description": "Safety mode is activated if there is no Modbus polling within the specified timeout. Supported since firmware 4.32.0",
+                "g_safety_description": "Safety mode is activated if there is no Modbus polling within the specified timeout",
                 "poll_timeout_description": "Timeout without Modbus polling after which safety mode will be activated",
                 "safety_command_description": "IR Command that will be played in safety mode"
             },
@@ -1795,7 +1799,7 @@
                 "Humidity Without Compensation": "Влажность до компенсации",
 
                 "Safety Mode": "Безопасный режим",
-                "g_safety_description": "Безопасный режим активируется, если в течение указанного времени отсутствует опрос по Modbus. Доступно с версии прошивки 4.32.0",
+                "g_safety_description": "Безопасный режим активируется, если в течение указанного времени отсутствует опрос по Modbus",
                 "Safety Poll Timeout (s)": "Таймаут потери связи (с)",
                 "poll_timeout_description": "Время отсутствия опроса, после которого будет активирован безопасный режим",
                 "Safety Action": "Действие в безопасном режиме",
