--- a/templates/config-map3h-fw2.json
+++ b/templates/config-map3h-fw2.json
@@ -71,7 +71,7 @@
                 "enum": [0, 1],
                 "default": 0,
                 "enum_titles": ["No", "Yes"],
-                "description": "Firmware v2.10.0 or newer is required",
+                "fw": "2.10.0",
                 "group": "l1",
                 "order": 3
             },
@@ -102,7 +102,7 @@
                 "enum": [0, 1],
                 "default": 0,
                 "enum_titles": ["No", "Yes"],
-                "description": "Firmware v2.10.0 or newer is required",
+                "fw": "2.10.0",
                 "group": "l2",
                 "order": 3
             },
@@ -133,7 +133,7 @@
                 "enum": [0, 1],
                 "default": 0,
                 "enum_titles": ["No", "Yes"],
-                "description": "Firmware v2.10.0 or newer is required",
+                "fw": "2.10.0",
                 "group": "l3",
                 "order": 3
             }
@@ -1179,8 +1179,7 @@
                 "Frequency": "Частота",
                 "Serial": "Серийный номер",
                 "Supply Voltage": "Напряжение 5 В",
-                "Uptime": "Время работы с момента включения (с)",
-                "Firmware v2.10.0 or newer is required": "Для прошивок v2.10.0 и новее"
+                "Uptime": "Время работы с момента включения (с)"
             }
         }
     }
