MS and MSW templates: Add sht40 cleaning mode (#1034)

--- a/templates/config-wb-ms_v2.json
+++ b/templates/config-wb-ms_v2.json
@@ -181,6 +181,28 @@
                 "group": "air_quality"
             },
             {
+                "name": "TH Sensor Heater Cleaning Mode Enabled",
+                "description": "Only for SHT40 temperature and humidity sensor",
+                "address": 8,
+                "fw": "4.35.0",
+                "reg_type": "coil",
+                "type": "switch",
+                "enabled": false,
+                "group": "air_quality"
+            },
+            {
+                "name": "TH Sensor Heater Cleaning Mode Countdown",
+                "description": "Only for SHT40 temperature and humidity sensor",
+                "address": 365,
+                "fw": "4.35.0",
+                "reg_type": "input",
+                "type": "value",
+                "units": "s",
+                "format": "u16",
+                "enabled": false,
+                "group": "air_quality"
+            },
+            {
                 "name": "Illuminance",
                 "reg_type": "input",
                 "address": 2,
@@ -333,6 +355,30 @@
                 "group": "debug"
             },
             {
+                "name": "Temperature Without Compensation",
+                "reg_type": "input",
+                "address": 284,
+                "type": "value",
+                "units": "deg C",
+                "format": "s16",
+                "scale": 0.01,
+                "error_value": "0x7FFF",
+                "enabled": false,
+                "group": "debug"
+            },
+            {
+                "name": "Humidity Without Compensation",
+                "reg_type": "input",
+                "address": 285,
+                "type": "value",
+                "units": "%, RH",
+                "format": "s16",
+                "scale": 0.01,
+                "error_value": "0x7FFF",
+                "enabled": false,
+                "group": "debug"
+            },
+            {
                 "name": "External Sensor 1",
                 "reg_type": "input",
                 "address": "6",
@@ -405,6 +451,9 @@
                 "HW Info": "Данные модуля",
                 "Debug": "Диагностика",
                 "TH Sensor Heater Enabled": "Включить подогрев датчика TH",
+                "TH Sensor Heater Cleaning Mode Enabled": "Включить режим очистки датчика TH",
+                "TH Sensor Heater Cleaning Mode Countdown": "Оставшееся время очистки датчика TH",
+                "Only for SHT40 temperature and humidity sensor": "Только для датчика температуры и влажности SHT40",
                 "no": "нет",
                 "yes": "да",
                 "Self-Heating Compensation (°C)": "Компенсация самонагрева (°C)",
@@ -439,6 +488,8 @@
                 "Illuminance Mode": "Режим измерения освещенности",
                 "Successful TH Readings": "Успешные запросы к датчику TH",
                 "Erroneous TH Readings": "Ошибочные запросы к датчику TH",
+                "Temperature Without Compensation": "Температура до компенсации",
+                "Humidity Without Compensation": "Влажность до компенсации",
                 "1-Wire": "Датчик 1-Wire",
                 "Input 1": "Вход 1",
                 "Input 2": "Вход 2",
