--- a/templates/config-wb-msw_v3.json
+++ b/templates/config-wb-msw_v3.json
@@ -305,6 +305,28 @@
                 "condition": "co2_sensor_type==0"
             },
             {
+                "name": "TH Sensor Heater Cleaning Mode Enabled",
+                "description": "Only for SHT40 temperature and humidity sensor",
+                "address": 8,
+                "fw": "4.35.0",
+                "reg_type": "coil",
+                "type": "switch",
+                "enabled": false,
+                "group": "air_quality"
+            },
+            {
+                "name": "TH Sensor Heater Cleaning Mode Countdown",
+                "description": "Only for SHT40 temperature and humidity sensor",
+                "address": 365,
+                "fw": "4.35.0",
+                "reg_type": "input",
+                "type": "value",
+                "units": "s",
+                "format": "u16",
+                "enabled": false,
+                "group": "air_quality"
+            },
+            {
                 "name": "Air Quality (VOC)",
                 "reg_type": "input",
                 "address": 11,
@@ -1624,6 +1646,8 @@
                 "name": "Temperature Without Compensation",
                 "reg_type": "input",
                 "address": 284,
+                "type": "value",
+                "units": "deg C",
                 "format": "s16",
                 "scale": 0.01,
                 "error_value": "0x7FFF",
@@ -1634,8 +1658,11 @@
                 "name": "Humidity Without Compensation",
                 "reg_type": "input",
                 "address": 285,
+                "type": "value",
+                "units": "%, RH",
+                "format": "s16",
                 "scale": 0.01,
-                "error_value": "0xFFFF",
+                "error_value": "0x7FFF",
                 "enabled": false,
                 "group": "debug"
             }
@@ -1680,6 +1707,8 @@
                 "automatic": "включена",
                 "CO₂ Measurement Range (ppm)": "Диапазон измерения концентрации CO₂ (ppm)",
                 "TH Sensor Heater Enabled": "Включить подогрев датчика TH",
+                "TH Sensor Heater Cleaning Mode Enabled": "Включить режим очистки датчика TH",
+                "TH Sensor Heater Cleaning Mode Countdown": "Оставшееся время очистки датчика TH",
                 "Self-Heating Compensation (°C)": "Компенсация самонагрева (°C)",
                 "selfheating_compensation_deg_description": "Значение компенсации вычитается из измеренной температуры",
                 "Low-pass Filter Time Constant (ms)": "Время усреднения шума (мс)",
@@ -1826,6 +1855,7 @@
                 "CO2 Sensor Type": "Тип датчика CO₂",
                 "CO2 Sensor Software Version": "Версия ПО датчика CO₂",
                 "Only for MH-Z19B CO₂ sensor": "Только для CO₂ датчика MH-Z19B",
+                "Only for SHT40 temperature and humidity sensor": "Только для датчика температуры и влажности SHT40",
                 "CO2 MH-Z19 Temperature": "Температура CO₂ датчика MH-Z19B",
                 "CO2 MH-Z19 Autocalibration Ticks": "Время цикла автокалибровки CO₂ датчика MH-Z19B (1 ед. ~7.5 минут)",
                 "CO2 MH-Z19 Autocalibration Count": "Число циклов автокалибровки CO₂ датчика MH-Z19B",
