--- a/templates/config-map3et.json
+++ b/templates/config-map3et.json
@@ -6,6 +6,9 @@
         {
             "signature": "MAP3E",
             "fw": "2.0.0"
+        },
+        {
+            "signature": "WB-MAP3ET"
         }
     ],
     "device": {
@@ -238,7 +241,7 @@
                 "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "l1"
-            }, 
+            },
             {
                 "name": "Phase angle L1",
                 "reg_type": "input",
@@ -399,7 +402,7 @@
                 "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "l2"
-            }, 
+            },
             {
                 "name": "Phase angle L2",
                 "reg_type": "input",
@@ -632,7 +635,7 @@
                 "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "total"
-            }, 
+            },
             {
                 "name": "Total RP energy",
                 "reg_type": "input",
@@ -654,7 +657,7 @@
                 "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "total"
-            }, 
+            },
             {
                 "name": "Frequency",
                 "reg_type": "input",
@@ -724,9 +727,9 @@
         ],
         "translations": {
             "en": {
-                "WB-MAP3ET_template_title": "WB-MAP3ET (3-phase enegry meter)",
+                "WB-MAP3ET_template_title": "WB-MAP3ET (3-phase energy meter)",
                 "baud_rate_description": "Make sure that communication with device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value.",
-                "phase_loss_detection_description": "Resets voltage and power values if voltage on phase is less than 30% of maximum voltage among all phases. Firmware v2.6.3 or newer is required.",
+                "phase_loss_detection_description": "Resets voltage and power values if voltage on phase is less than 30% of maximum voltage among all phases.",
                 "Supply Voltage": "5V Supply",
                 "Uptime": "Uptime (s)"
             },
@@ -741,7 +744,7 @@
                 "Phase loss detection": "Обнаруживать отключения фаз",
                 "Enabled": "Включено",
                 "Disabled": "Выключено",
-                "phase_loss_detection_description": "Обнуляет показатели напряжения и связанных с ними мощностей, если напряжение на фазе будет менее 30% от наибольшего из трех фаз. Для прошивок v2.6.3 и новее.",
+                "phase_loss_detection_description": "Обнуляет показатели напряжения и связанных с ними мощностей, если напряжение на фазе будет менее 30% от наибольшего из трех фаз.",
                 "Voltage angle L1": "Фазовый угол L1",
                 "AP energy L1": "Энергия AP L1",
                 "RP energy L1": "Энергия RP L1",
