[FW-1214] Add HW Batch channel for 'g-refrigeration' templates

--- a/templates/config-carel-pj-basic.json
+++ b/templates/config-carel-pj-basic.json
@@ -38,6 +38,10 @@
             {
                 "title": "Control",
                 "id": "control"
+            },
+            {
+                "title": "HW Info",
+                "id": "hw_info"
             }
         ],
 
@@ -504,6 +508,16 @@
                 "scale": 0.1,
                 "round_to": 0.1,
                 "format": "s16"
+            },
+            {
+                "name": "HW Batch Number",
+                "reg_type": "input",
+                "address": 304,
+                "type": "text",
+                "format": "string",
+                "string_data_size": 16,
+                "group": "hw_info",
+                "enabled": false
             }
         ]
     }
