--- a/templates/config-danfoss-ekc-202b-wb-ref.json
+++ b/templates/config-danfoss-ekc-202b-wb-ref.json
@@ -1030,6 +1030,16 @@
                 "enabled": false
             },
             {
+                "name": "HW Batch Number",
+                "address": 304,
+                "reg_type": "input",
+                "type": "text",
+                "format": "string",
+                "string_data_size": 16,
+                "group": "card_info",
+                "enabled": false
+            },
+            {
                 "name": "Supply Voltage",
                 "address": 121,
                 "reg_type": "input",
