--- a/templates/config-eliwell-idplus-9xx.json
+++ b/templates/config-eliwell-idplus-9xx.json
@@ -53,6 +53,10 @@
             {
                 "title": "Configuration (Cnf)",
                 "id": "configuration"
+            },
+            {
+                "title": "HW Info",
+                "id": "hw_info"
             }
         ],
 
@@ -1444,6 +1448,16 @@
                 "format": "u16",
                 "min": 0,
                 "group": "control"
+            },
+            {
+                "name": "HW Batch Number",
+                "reg_type": "input",
+                "address": 304,
+                "type": "text",
+                "format": "string",
+                "string_data_size": 16,
+                "group": "hw_info",
+                "enabled": false
             }
         ]
     }
