--- a/templates/config-carel-mu-rack.json
+++ b/templates/config-carel-mu-rack.json
@@ -49,6 +49,10 @@
             {
                 "title": "Setpoint",
                 "id": "setpoint"
+            },
+            {
+                "title": "HW Info",
+                "id": "hw_info"
             }
         ],
         "parameters": [
@@ -2495,6 +2499,16 @@
                 "units": "%",
                 "address": 500,
                 "format": "u16"
+            },
+            {
+                "name": "HW Batch Number",
+                "reg_type": "input",
+                "address": 304,
+                "type": "text",
+                "format": "string",
+                "string_data_size": 16,
+                "group": "hw_info",
+                "enabled": false
             }
         ],
         "translations": {
@@ -2757,7 +2771,8 @@
                 "Only if prevent active": "Только если активно предотвращение",
                 "MANUAL": "Ручной",
                 "AUTO": "Автоматический",
-                "NO ROTATION": "Без чередования"
+                "NO ROTATION": "Без чередования",
+                "HW Batch Number": "Номер партии"
             }
         }
     }
