--- a/templates/config-danfoss-ekc-202b.json
+++ b/templates/config-danfoss-ekc-202b.json
@@ -1014,6 +1014,16 @@
                 "readonly": true,
                 "group": "controller_info",
                 "enabled": false
+            },
+            {
+                "name": "HW Batch Number",
+                "address": 304,
+                "reg_type": "input",
+                "type": "text",
+                "format": "string",
+                "string_data_size": 16,
+                "group": "controller_info",
+                "enabled": false
             }
         ]
     }
