--- a/templates/config-eliwell-id-985-lx-wb-ref.json
+++ b/templates/config-eliwell-id-985-lx-wb-ref.json
@@ -2083,6 +2083,16 @@
                 "group": "hw_info"
             },
             {
+                "name": "HW Batch Number",
+                "address": 304,
+                "reg_type": "input",
+                "type": "text",
+                "format": "string",
+                "string_data_size": 16,
+                "group": "hw_info",
+                "enabled": false
+            },
+            {
                 "name": "Controller Type",
                 "address": 816,
                 "reg_type": "holding",
