--- a/templates/config-eliwell-idplus-9xx-wb-ref.json
+++ b/templates/config-eliwell-idplus-9xx-wb-ref.json
@@ -1479,6 +1479,16 @@
                 "enabled": false
             },
             {
+                "name": "HW Batch Number",
+                "reg_type": "input",
+                "address": 304,
+                "type": "text",
+                "format": "string",
+                "string_data_size": 16,
+                "group": "hw_info",
+                "enabled": false
+            },
+            {
                 "name": "Controller Type",
                 "reg_type": "holding",
                 "address": 816,
